Complete Warrior Armor and Stats

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,2 +1,4 @@
 item.class_pvp:warrior_helmet=Warrior Helmet
 item.class_pvp:warrior_chestplate=Warrior Chestplate
+item.class_pvp:warrior_leggings=Warrior Leggings
+item.class_pvp:warrior_boots=Warrior Boots
