--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,4 +1,8 @@
+## Warrior Class
 item.class_pvp:warrior_helmet=Warrior Helmet
 item.class_pvp:warrior_chestplate=Warrior Chestplate
 item.class_pvp:warrior_leggings=Warrior Leggings
 item.class_pvp:warrior_boots=Warrior Boots
+
+## Archer Class
+item.class_pvp:archer_helmet=Archer Helmet
