added several translations

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -23,3 +23,17 @@ gamemode.class_pvp:team_deathmatch=Team Deathmatch
 
 class.class_pvp:warrior=Warrior
 class.class_pvp:archer=Archer
+
+## Team names
+team.class_pvp:none=None
+team.class_pvp:red=Red
+team.class_pvp:blue=Blue
+team.class_pvp:green=Green
+team.class_pvp:yellow=Yellow
+team.class_pvp:aqua=Aqua
+team.class_pvp:white=White
+team.class_pvp:pink=Pink
+team.class_pvp:grey=Gray
+
+phrases.class_pvp:wins=wins
+phrases.class_pvp:tie=Tie
